--- a/public/locales/en/process.json
+++ b/public/locales/en/process.json
@@ -31,6 +31,6 @@
     },
     "step-5": {
         "title": "Development",
-        "texts": "<p>PASSION</p><p>MOTIVATION</p><p>DEDICATION</p>"
+        "texts": "<p>This is where the magic happens.</p><p>Too often, we can be satisfied if it simlpy works.</p><p>But I hate spaghetti code and unstable software.</p><p>Your project must be <strong>robust</strong> and easy to maintain.</p>"
     }
 }
